# AgentsBuilder

./: .gitignore  LICENSE  PLAN_MULTI_FRAMEWORK.md  README.md  RELEASE_TRACKING.md  SDK_VERIFICATION_REPORT.md  SESSION_APPRAISAL_REVIEW.md  SESSION_STRANDS_CONTRIBUTION.md  TERMINOLOGY.md  appraisal-review-workflow.json  index.html  package.json  start_all.sh
backend/: appraisal_review_pipeline.py  main.py  pyproject.toml
backend/app/routers/: templates.py
backend/db/migrations/: 001_create_templates_table.sql  002_seed_official_templates.sql  003_create_projects_table.sql  004_create_rate_limiting_and_eval.sql  005_seed_rich_templates.sql  006_add_framework_column.sql  007_seed_rich_adk_templates.sql
src/: App.tsx  index.css
src/components/: advanced-features-config.tsx  agent-advanced-config.tsx  agent-plugins-config.tsx  code-panel.tsx  connection-banner.tsx  deploy-panel.tsx  deploy-progress.tsx  deployment-history.tsx  ecs-deploy-panel.tsx  execution-panel.tsx  flow-diff-view.tsx  flow-editor.tsx  guardrails-config.tsx  invoke-panel.tsx  main-layout.tsx  model-provider-config.tsx  node-palette.tsx  observability-config.tsx  project-manager.tsx  property-panel.tsx  trace-view.tsx  welcome-overlay.tsx
src/context/: framework-context.tsx
src/frameworks/: hooks.ts  registry.ts  types.ts
src/lib/: advanced-features-codegen.ts  agent-config-codegen.ts  api-client.ts  code-generator.ts  connection-validator.ts  deploy-auth-codegen.ts  flow-validator.ts  graph-code-generator.ts  guardrails-codegen.ts  model-code-generator.ts  (+8 more)
templates/: README.md
(+52 files in other folders)
