[project]
name = "agentic-builder-backend"
version = "2.0.0"
description = "Backend for AgenticBuilder — multi-framework visual agent builder (Strands + Google ADK)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.13.1",
    "strands-agents[openai]>=1.7.1",
    "strands-agents-tools[mem0_memory]",
    "strands-agents-tools>=0.2.6",
    "google-adk>=1.36.0",
    "google-genai>=1.0.0",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "psutil>=6.1.1",
    "bedrock-agentcore>=0.1.3",
    "bedrock-agentcore-starter-toolkit>=0.1.10",
]
